# mvp-be

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
api/: chat_routes.py
mvp_be/: config.py  main.py
mvp_be/api/: api_routes.py  chat_routes.py  jack_routes.py
mvp_be/services/: api_logic.py  chat_logic.py  jack_logic.py
services/: chat_logic.py
tests/: test_chat_logic.py
uploads/: Mike dilworth.docx  mike-dilworth-2024-v2.docx  mike-dilworth-2024.docx  mike-dilworth.docx  sky-buy.docx
