[project]
name = "mvp-be"
version = "0.1.0"
description = "mvp backend"
authors = [
    {name = "mike dilworth",email = "mike@dilworth.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi-middleware (>=0.2.1,<0.3.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[[tool.poetry.packages]]
include = "mvp_be"

